MyDevOrg/src/objects/Deployment_Package__c.object
<CustomObject>
    <fields>
        <fullName>Deployment_Type__c</fullName>
        <label>Deployment Type</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Deployment_package_Name__c</fullName>
        <label>Deployment package Name</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Release</label>
        <referenceTo>Release__c</referenceTo>
        <relationshipLabel>Deployment Packages</relationshipLabel>
        <relationshipName>Deployment_Packages</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Deployment Package</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Deployment Package{0000}</displayFormat>
        <label>Deployment Package Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deployment Packages</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>